--- a/templates/video/base.html
+++ b/templates/video/base.html
@@ -126,8 +126,31 @@
         </div>
     </div>
 </footer>
-    </center>
-    </center>
+
+
+<section>
+    <ul class="sidebar">
+        <li class="qq">
+            <a target="_blank" href=""></a>
+        </li>
+        <li class="totop"></li>
+    </ul>
+</section>
+
+<script src="{% static 'js/selectUi.js' %}" type='text/javascript'></script>
+<script src="{% static 'js/deco-common.js' %}" type='text/javascript'></script>
+<script type="text/javascript" src="{% static 'js/plugins/laydate/laydate.js' %}"></script>
+<script src="{% static 'js/plugins/layer/layer.js' %}"></script>
+<script src="{% static 'js/plugins/queryCity/js/public.js' %}" type="text/javascript"></script>
+<script src="{% static 'js/unslider.js' %}" type="text/javascript"></script>
+<script src="{% static 'js/plugins/jquery.scrollLoading.js' %}" type="text/javascript"></script>
+<script src="{% static 'js/deco-common.js' %}" type="text/javascript"></script>
+
+{% block custom_js %}
+
+{% endblock %}
+
+
 </body>
 </html>
 
