--- a/templates/usercenter_base.html
+++ b/templates/usercenter_base.html
@@ -6,11 +6,6 @@
 <link rel="stylesheet" type="text/css" href="{% static 'css/lq.datetimepick.css' %}"/>
 {% endblock %}
 
-{% block user_css %}
-{% endblock %}
-
-{% block user_bread %}
-{% endblock %}
 
 {% block content%}
 <section>
@@ -35,64 +30,19 @@
                     </li>
                 </ul>
             </div>
-    
             {% block custom_right_content %}
             {% endblock %}
         </div>
-    </section>
-
-<div class="dialog" id="jsDialog">
-        <div class="successbox dialogbox" id="jsSuccessTips">
-            <h1>成功提交</h1>
-            <div class="close jsCloseDialog"><img src="{% static '' %}images/dig_close.png"/></div>
-            <div class="cont">
-                <h2>您的需求提交成功！</h2>
-                <p></p>
-            </div>
-        </div>
-        <!--提示弹出框-->
-        <div class="bidtips dialogbox promptbox" id="jsComfirmDialig">
-            <h1>确认提交</h1>
-            <div class="close jsCloseDialog"><img src="{% static 'images/dig_close.png' %}"/></div>
-            <div class="cont">
-                <h2>您确认提交吗？</h2>
-                <dd class="autoTxtCount">
-                    <div class="button">
-                        <input type="button" class="fl half-btn" value="确定" id="jsComfirmBtn"/>
-                        <span class="fr half-btn jsCloseDialog">取消</span>
-                    </div>
-                </dd>
-            </div>
-        </div>
-</div>
-<div class="resetpwdbox dialogbox" id="jsResetDialog">
-        <h1>修改密码</h1>
-        <div class="close jsCloseDialog"><img src="{% static 'images/dig_close.png' %}"/></div>
-        <div class="cont">
-            <form id="jsResetPwdForm" autocomplete="off">
-                <div class="box">
-                    <span class="word2">新&nbsp;&nbsp;密&nbsp;&nbsp;码</span>
-                    <input type="password" id="pwd" name="password1" placeholder="6-20位非中文字符"/>
-                </div>
-                <div class="box">
-                    <span class="word2">确定密码</span>
-                    <input type="password" id="repwd" name="password2" placeholder="6-20位非中文字符"/>
-                </div>
-                <div class="error btns" id="jsResetPwdTips"></div>
-                <div class="button">
-                    <input id="jsResetPwdBtn" type="button" value="提交"/>
-                </div>
-                {% csrf_token %}
-            </form>
-        </div>
-</div>
+</section>
+{% include 'user_function.html'%}
 {% endblock %}
 
 {% block custom_js %}
 <script src="{% static 'js/plugins/jquery.upload.js' %}" type='text/javascript'></script>
 <script src="{% static 'js/validate.js' %}" type="text/javascript"></script>
 <script src="{% static 'js/deco-user.js' %}"></script>
-{% endblock %}
 
 {% block user_js %}
+{% endblock %}
+
 {% endblock %}
