--- a/templates/video/index.html
+++ b/templates/video/index.html
@@ -2,25 +2,33 @@
 {% load staticfiles %}
 {% load static %}
 
-{% block title %}视频列表{% endblock title %}
 
 {% block content %}
-    <div>视频列表</div>
-    <br>
-    <div>
-        {% if video_list %}
-            <ul>
-            {% for video in video_list %}
-                <a href="{{ video.id }}">{{ video.title }}</a>
-                <div>视频简介：{{video.description}}</div>
-                <div>
-                    <span>发布时间：{{ video.create_time }}</span>
-                </div>
-                <br>
-            {% endfor %}
-            </ul>
-        {% else %}
-            <p>No video.</p>
-        {% endif %}
+    <div class="right companycenter layout" >
+        <div class="head">
+            <h1>教程列表</h1>
+        </div>
+        <div class="messagelist">
+            <div class=" butler_list butler-fav-box">
+                {% if video_list %}
+                    {% for video in video_list %}
+                    <dl class="des users">
+                        <dt>
+                        <a href="{{ video.id }}">{{ video.title }}</a>
+                        </dt>
+                        <dd>
+                            <ul class="cont clearfix">
+                                <li class="c7">视频简介：<span>{{video.description}}</span></li>
+                                <li class="time">发布时间：<span>{{ video.create_time }}</span></li>  
+                            </ul>
+                        </dd>
+                    </dl>
+                    {% endfor %}
+                    </ul>
+                {% else %}
+                    <p>No video.</p>
+                {% endif %}
+            </div>
+        </div>
     </div>
 {% endblock content %}
