--- a/templates/video/index.html
+++ b/templates/video/index.html
@@ -4,6 +4,10 @@
 
 
 {% block content %}
+
+
+
+<div class="wp list personal_list comp">
     <div class="right companycenter layout" >
         <div class="head">
             <h1>教程列表</h1>
@@ -12,22 +16,17 @@
             <div class=" butler_list butler-fav-box">
                 {% if video_list %}
                     {% for video in video_list %}
-                    <dl class="des users">
-                        <dt>
-                        <a href="{{ video.id }}">{{ video.title }}</a>
-                        </dt>
-                        <dd>
-                            <h1>
-                            <a href="{{ video.id }}">{{ video.title }}</a>
-                            </h1>
-                            <ul class="cont clearfix"> 
-                                <li class="c7">视频简介：<span>{{video.description}}</span></li>
-                            </ul>
-                            <ul class="cont clearfix"> 
-                                <li class="time">发布时间：<span>{{ video.create_time }}</span></li>  
-                            </ul>
-                        </dd>
-                    </dl>
+                        <dl class="des users">  
+                            <dt>
+                                <a href="{{ video.id }}">{{ video.title }}</a>
+                            </dt>
+                            <dd>
+                                <ul class="cont clearfix"> 
+                                    <li class="c7">视频简介：<span>{{video.description}}</span></li>
+                                    <li class="time">发布时间：<span>{{ video.create_time }}</span></li>  
+                                </ul>
+                            </dd>
+                        </dl>
                     {% endfor %}
                 {% else %}
                     <p>No video.</p>
@@ -35,4 +34,8 @@
             </div>
         </div>
     </div>
+</div>
+
+
+
 {% endblock content %}
