--- a/templates/video/index.html
+++ b/templates/video/index.html
@@ -5,11 +5,9 @@
 
 {% block content %}
 
-
-
 <div class="wp list personal_list comp">
-    <div class="right companycenter layout" >
-        <div class="head">
+    <div class="right companycenter layout" style="float:left;margin-top:2px;">
+        <div  class="head">
             <h1>教程列表</h1>
         </div>
         <div class="messagelist">
@@ -18,12 +16,19 @@
                     {% for video in video_list %}
                         <dl class="des users">  
                             <dt>
-                                <a href="{{ video.id }}">{{ video.title }}</a>
+                                <a href="{{ video.id }}">
+                                <img width="100" height="100" class="scrollLoading" src="{% static 'images/logo1.jpg' %}"/>
+                                </a>
                             </dt>
                             <dd>
+                                <h1>
+                                    <a href="{{ video.id }}">
+                                    {{ video.title }}
+                                    </a>
+                                </h1>
                                 <ul class="cont clearfix"> 
-                                    <li class="c7">视频简介：<span>{{video.description}}</span></li>
-                                    <li class="time">发布时间：<span>{{ video.create_time }}</span></li>  
+                                    <p>视频简介：<span>{{video.description}}</span></p><br>
+                                    <p>发布时间：<span>{{ video.create_time }}</span></p>  
                                 </ul>
                             </dd>
                         </dl>
