--- a/templates/video/index.html
+++ b/templates/video/index.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-<div class="wp list personal_list comp">
+<div class="wp list personal_list comp" style="margin-left:80px">
     <div class="right companycenter layout" style="float:left;margin-top:2px;">
         <div  class="head">
             <h1>教程列表</h1>
