--- a/templates/files/base.html
+++ b/templates/files/base.html
@@ -1,13 +1,14 @@
-{% load static %}
+{#templates/base.html#}
+
 {% load staticfiles %}
 
 <!DOCTYPE html>
-<html lang="zh-hans">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
-    <title>{% block title %}航天创客python视频教程{% endblock %}</title>
+    <title>{% block title %}航天创客{% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/reset.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/animate.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
@@ -16,9 +17,10 @@
     {% endblock %}
     <script src="{% static 'js/jquery.min.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/jquery-migrate-1.2.1.min.js' %}" type="text/javascript"></script>
+
 </head>
 <body>
-    
+
 <section class="headerwrap ">
     <header>
         <div class=" header">
@@ -31,7 +33,7 @@
                         <div class="personal">
                             <dl class="user fr">
                                 <dd>{{ user.username }}<img class="down fr"
-                                                            src="{% static "images/top_down.png" %}"/></dd>
+                                        src="{% static "images/top_down.png" %}"/></dd>
                                 <dt><img width="20" height="20" src="{{ MEDIA_URL }}{{ request.user.image }}"/></dt>
                             </dl>
                             <div class="userdetail">
@@ -39,18 +41,19 @@
                                     <dt><img width="80" height="80" src="{{ MEDIA_URL }}{{ request.user.image }}"/></dt>
                                     <dd>
                                         <h2>{{ request.user.nick_name }}</h2>
-                                        <p>{{ request.user.username }}</p>
+                                        <!-- <p>{{ request.user.username }}</p> -->
                                     </dd>
                                 </dl>
-                                <div class="btn">
-                                    <a class="personcenter fl" href="">进入个人中心</a>
-                                    <a class="fr" href="">退出</a>
+                                <div class="btn" style="margin-top: 20px;">
+                                    <a class="personcenter fl"  href="{% url 'users:user_info' %}">进入个人中心</a>
+                                    <a class="fr" href="{% url 'users:logout' %}">退出</a>
                                 </div>
                             </div>
                         </div>
                     {% else %}
                         <a style="color:white" class="fr registerbtn" href="{% url 'users:register' %}">邮箱注册</a>
                         <a style="color:white" class="fr registerbtn" href="{% url 'users:verify' %}">手机注册</a>
+                        <a style="color:white" class="fr loginbtn" href="/xadmin">管理员</a>
                         <a style="color:white" class="fr loginbtn" href="{% url 'users:login' %}">登录</a>
                     {% endif %}
                 </div>
@@ -97,43 +100,36 @@
             </nav>
         </div>
     </header>
-<br>
 </section>
+<!--crumbs start-->
+
+{#面包屑#}
+{% block custom_bread %}
+{% endblock %}
+
+{#正文#}
+{% block content %}
+{% endblock %}
+
+{% block footer %}
+{% endblock %}
 
 
 
-    <center>
-    <main>
-    {% block content %}
-    这是网页主体部分
-    {% endblock content %}
-    </main>
-    <center>
-
-    <br>
 
 
+<script src="{% static 'js/selectUi.js' %}" type='text/javascript'></script>
+<script src="{% static 'js/deco-common.js' %}" type='text/javascript'></script>
+<script type="text/javascript" src="{% static 'js/plugins/laydate/laydate.js' %}"></script>
+<script src="{% static 'js/plugins/layer/layer.js' %}"></script>
+<script src="{% static 'js/plugins/queryCity/js/public.js' %}" type="text/javascript"></script>
+<script src="{% static 'js/unslider.js' %}" type="text/javascript"></script>
+<script src="{% static 'js/plugins/jquery.scrollLoading.js' %}" type="text/javascript"></script>
+<script src="{% static 'js/deco-common.js' %}" type="text/javascript"></script>
 
-<footer>
-    <div class="footer">
-        <div class="wp">
-            <ul class="cont">
-                <li class="logo"><a href=""><img src="{% static 'images/footlogo.png' %}"/></a></li>
-                <li class="code"><img src="{% static 'images/code.jpg' %}"/>
-                    <p class="center">扫描关注微信</p></li>
-                <li class="third"><img class="fl" src="{% static 'images/tell.png' %}"/>
-                    <p class="tell">88888888</p>
-                    <p class="time">周一至周日 9:00-18:00</p></li>
-            </ul>
-        </div>
-        <p class="line"></p>
-        <div class="wp clear">
-            <span class="fl"> 2019 www.secoder.net.com 航天创客-卫星教育在线交流平台 保留所有权利</span>
-            <span class="fr">copyright 2019 ICP备案证书号：京ICP备xxxxx号-1</span>
-        </div>
-    </div>
-</footer>
+{% block custom_js %}
+
+{% endblock %}
 
 </body>
 </html>
-
