--- a/templates/login.html
+++ b/templates/login.html
@@ -72,7 +72,7 @@
                 <form action="/users/login/" method="post" autocomplete="off">
                     <div class="form-group marb20 {% if login_form.errors.username %}errorput{% endif %}">
                         <label>用&nbsp;户&nbsp;名</label>
-                        <input name="username" id="account_l" type="text" placeholder="用户名/邮箱" />
+                        <input name="username" id="account_l" type="text" placeholder="用户名/手机号/邮箱" />
                     </div>
                     <div class="form-group marb8 {% if login_form.errors.username %}errorput{% endif %}">
                         <label>密&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;码</label>
