--- a/templates/user_function.html
+++ b/templates/user_function.html
@@ -25,20 +25,25 @@
         </div>
     </div>
     <!-- 修改密码 -->
-    <div class="resetpwdbox dialogbox" id="jsResetDialog">
+    <div class="resetpwdbox dialogbox changephone" id="jsResetDialog">
             <h1>修改密码</h1>
             <div class="close jsCloseDialog"><img src="{% static 'images/dig_close.png' %}"/></div>
             <div class="cont">
                 <form id="jsResetPwdForm" autocomplete="off">
                     <div class="box">
+                            <input class="fl email_code" type="text" id="jsChangePwdCode" name="code" placeholder="输入手机验证码">
+                            <input class="getcode getting" type="button" id="jsChangePwdCodeBtn" value="获取验证码">
+                    </div>
+                    <div class="box">
                         <span class="word2">新&nbsp;&nbsp;密&nbsp;&nbsp;码</span>
-                        <input type="password" id="pwd" name="password1" placeholder="6-20位非中文字符"/>
+                        <input type="password" id="pwd" name="password1" placeholder="6-20位非中文字符" disabled="True"/>
                     </div>
                     <div class="box">
                         <span class="word2">确定密码</span>
-                        <input type="password" id="repwd" name="password2" placeholder="6-20位非中文字符"/>
+                        <input type="password" id="repwd" name="password2" placeholder="6-20位非中文字符" disabled="True"/>
                     </div>
                     <div class="error btns" id="jsResetPwdTips"></div>
+                    <div class="error btns change_email_tips" id="jsChangeMobileTips">请输入...</div>
                     <div class="button">
                         <input id="jsResetPwdBtn" type="button" value="提交"/>
                     </div>
@@ -86,4 +91,4 @@
         </form>
     </div>
 </div>
-<div class="bg" id="dialogBg"></div>
+<div class="bg" id="dialogBg"></div>    
