--- a/templates/files/index.html
+++ b/templates/files/index.html
@@ -4,27 +4,27 @@
 {% block title %}我的代码{% endblock title %}
 
 {% block content %}
-{% if request.user.is_authenticated %}
+{% if not request.user.is_authenticated %}
 <div>
+    <h2>上传我的代码</h2><br>
     <form method="post" action="/files/upload/" enctype="multipart/form-data">
     {% csrf_token %}
+    <h2>对代码功能的描述</h2><br>
         <textarea name="message" rows="10" cols="30">
-        对代码功能的描述
-        </textarea>
+        </textarea><br>
         <input type="file" name="sendfile"/>
         <input type="submit" value="确定"/>
     </form>
     
 </div>
 
- <div><a style="color:white" class="fr loginbtn" href="{% url 'users:login' %}">上传代码</a></div>
     <div>代码列表</div>
     <br>
     <div>
         {% if file_list %}
             <ul>
             {% for file in file_list %}
-                <a href="file_show/{{ file.username }}/{{file.filename}}">{{ file.filename }}</a>
+                <a href="file_show/{{ user.name }}/{{file.filename}}/">{{ file.filename }}</a>
                 <div>代码描述：{{file.description}}</div>
                 <div>
                     <span>上传时间：{{ file.upload_time }}</span>
