--- a/templates/files/index.html
+++ b/templates/files/index.html
@@ -4,21 +4,22 @@
 {% block title %}我的代码{% endblock title %}
 
 {% block content %}
+<br>
 {% if request.user.is_authenticated %}
 <div>
-    <h2>上传我的代码</h2><br>
+    <h1><big><b>上传我的代码</b></h1></big><br>
     <form method="post" action="/files/upload/" enctype="multipart/form-data">
     {% csrf_token %}
-    <h2>对代码功能的描述</h2><br>
+    <h2>对代码功能的描述:</h2><br>
         <textarea name="message" rows="10" cols="30">
         </textarea><br>
         <input type="file" name="sendfile"/>
-        <input type="submit" value="确定"/>
+        <h1><input type="submit" value="确定"/></h1>
     </form>
-    
+    <br>
 </div>
-
-    <div>代码列表</div>
+<h2>
+    <div><big><b>代码列表</b></big></div>
     <br>
     <div>
         {% if file_list %}
@@ -37,8 +38,9 @@
         {% else %}
             <p>还没有上传代码</p>
         {% endif %}
+</h2>
     </div>
     {% else %}
-    登录后可以上传和查看代码
+    <h2>登录后可以上传和查看代码</h2>
 {% endif %}
 {% endblock content %}
